@@ -10,21 +10,29 @@
 namespace Mercator { 
 
 class BasePoint {
-	
+  private:
+    float m_height;
+    float m_roughness;
+    float m_falloff;
+
   public:
+    const static float HEIGHT = 8.0;
     const static float ROUGHNESS = 1.15;
     const static float FALLOFF = 0.15;
-    const static float HEIGHT = 8.0;
 
-    float height;
-    float roughness;
-    float falloff;
-    BasePoint(float h, float r, float f) : height(h), roughness(r), falloff(f) {}
-    BasePoint(float h, float r) : height(h), roughness(r), falloff(FALLOFF) {}
-    BasePoint(float h) : height(h), roughness(ROUGHNESS), falloff(FALLOFF) {}
-    BasePoint() : height(HEIGHT), roughness(ROUGHNESS), falloff(FALLOFF) {}
+    explicit BasePoint(float h = HEIGHT, float r = ROUGHNESS, float f = FALLOFF) :
+                 m_height(h), m_roughness(r), m_falloff(f) {}
 
-    int seed() const { return (int)(height * 10.0);}
+    const float height() const { return m_height; }
+    float & height() { return m_height; }
+
+    const float roughness() const { return m_roughness; }
+    float & roughness() { return m_roughness; }
+
+    const float falloff() const { return m_falloff; }
+    float & falloff() { return m_falloff; }
+
+    int seed() const { return (int)(m_height * 10.0);}
 };
 
 } //namespace Mercator
