@@ -1,0 +1,8 @@
+TESTS = mercatortest
+
+check_PROGRAMS = mercatortest
+
+mercatortest_SOURCES = \
+		 main.cpp
+
+mercatortest_LDADD = -L$(top_builddir)/Mercator -lmercator-0.2
